--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,58 +1,99 @@
 body {
-  background-color: #eee;
+  background-color: #121212;
   display: flex;
+  justify-content: center;
+  
   font-family: 'Muli', sans-serif;
 }
 
 .contract, .existing-contracts {
-  margin: 20px;
-  display: inline-block;
+  margin: 15px;
+  border-radius: 20px;
+
+  width: 80vw;
+  max-width: 580px;
+
   padding: 40px;
-  border: 1px solid #ddd;
-  background-color: #fff;
+  border: 1px solid #323f4b;
+  background-color: #1f2933;
 }
 
 h1 {
+  color: #e0e0e0;
   margin: 10px;
   padding: 10px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #e0e0e0;
+  
+  text-align: center;
 }
 
 label {
   display: flex;
   flex-direction: column;
   text-transform: uppercase;
-  color: #aaa;
+  color: #9e9e9e;
   margin: 20px;
+}
+
+label > h2 {
+  margin: 0 10px;
+  font-size: 15px;
+  font-weight: 200;
 }
 
 input[type="text"] {
-  padding: 6px;
+  color: #e0e0e0;
+  padding: 6px 10px;
   font-size: 18px;
+
+  background-color: #323f4b;
+  border: 0px;
+  border-radius: 10px;
+
+}
+
+input[type="text"]:focus {
+
+  background-color: #3e4c59;
+
+  border: 0;
+
 }
 
 .button {
-  background-color: #f58427;
-  color: white;
+  background-color: #ff7597;
+  color: #323f4b;
   text-align: center;
   font-weight: bold;
   text-transform: uppercase;
-  margin: 20px;
   padding: 9px 25px;
   font-size: 14px;
   letter-spacing: 1px;
   cursor: pointer;
+
+  width: 5rem;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.button:hover{
+  color: #e0e0e0;
+  background-color: #ff0266;
 }
 
 .existing-contract ul {
+  color: #e0e0e0;
   padding: 10px;
   margin: 20px;
-  background-color: #eee;
+  border-radius: 10px;
+  background-color: #323f4b;
+  overflow: auto;
 }
 
 .existing-contract ul > li {
   list-style: none;
   display: flex;
+  justify-content: space-between;
   margin: 10px;
 }
 
@@ -67,4 +108,17 @@ input[type="text"] {
 .existing-contract .complete {
   color: #5aa75a;
   text-align: center;
+}
+
+.existing-contract .waiting {
+  color: #dad048;
+  text-align: center;
+}
+
+footer{
+  color: #e0e0e0;
+  text-align: center;
+  margin: 40px 0;
+  line-height: 25px;
+  letter-spacing: 1px;
 }
